Refactor rename